api_versioned_docs/version-12.0.0-rc1/compiledavaloniaxaml/avaloniaresources.mdx
---
title: '!AvaloniaResources'
hide_title: true
slug: '/compiledavaloniaxaml/avaloniaresources'
uid: 'CompiledAvaloniaXaml.!AvaloniaResources'
commentId: 'T:CompiledAvaloniaXaml.!AvaloniaResources'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Dialogs'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'CompiledAvaloniaXaml'
tfms:
  - 'net10.0'
  - 'net8.0'
  - 'net8.0-ios18.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">!AvaloniaResources Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">CompiledAvaloniaXaml</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Dialogs</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia</code>
</div>
</div>

<div className="apiref-page__signature">

```csharp
public class !AvaloniaResources
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> !AvaloniaResources
</div>
</div>

Available in: net10.0, net8.0, net8.0-ios18.0

Differences by target framework:

- `net10.0`

```csharp
public class !AvaloniaResources
```

- `net8.0`

```csharp
public class !AvaloniaResources
```

- `net8.0-ios18.0`

```csharp
public class !AvaloniaResources
```

## Methods

| Name | Description |
| --- | --- |
| [Build:/Controls/CarouselPage.xaml](#uid-b6c5af77f8) | No summary available. |
| [Build:/Controls/ContentPage.xaml](#uid-e8e48fa675) | No summary available. |
| [Build:/Controls/DrawerPage.xaml](#uid-eb6096c876) | No summary available. |
| [Build:/Controls/NavigationPage.xaml](#uid-b8757e9cd7) | No summary available. |
| [Build:/Controls/PipsPager.xaml](#uid-5bab942d65) | No summary available. |
| [Build:/Controls/TabbedPage.xaml](#uid-58e0407545) | No summary available. |
| [Build:/Controls/TextSelectionHandle.xaml](#uid-b110d5bc5c) | No summary available. |
| [Build:/FluentTheme/Internal/Slider.axaml](#uid-12c5a50494) | No summary available. |
| [Build:/Themes/Default.axaml](#uid-c609b8087a) | No summary available. |
| [Build:/Themes/Fluent.axaml](#uid-bfe28687f1) | No summary available. |
| [Build:/Themes/Fluent/Fluent.xaml](#uid-bbd752db4c) | No summary available. |
| [Build:/Themes/Generic.axaml](#uid-5997089c96) | No summary available. |
| [Build:/Themes/Simple/Simple.xaml](#uid-61f4611297) | No summary available. |
| [Populate:/Controls/CarouselPage.xaml](#uid-4a941a49cf) | No summary available. |
| [Populate:/Controls/ContentPage.xaml](#uid-33fab34546) | No summary available. |
| [Populate:/Controls/DrawerPage.xaml](#uid-21829c9912) | No summary available. |
| [Populate:/Controls/NavigationPage.xaml](#uid-bbd19cb593) | No summary available. |
| [Populate:/Controls/PipsPager.xaml](#uid-644ac6b1f3) | No summary available. |
| [Populate:/Controls/TabbedPage.xaml](#uid-eeb2ae5e7a) | No summary available. |
| [Populate:/Controls/TextSelectionHandle.xaml](#uid-81cb804ae5) | No summary available. |
| [Populate:/FluentTheme/Internal/Slider.axaml](#uid-213b043797) | No summary available. |
| [Populate:/Themes/Default.axaml](#uid-13ff60daff) | No summary available. |
| [Populate:/Themes/Fluent.axaml](#uid-997d35fcf9) | No summary available. |
| [Populate:/Themes/Fluent/Fluent.xaml](#uid-32ec062a9c) | No summary available. |
| [Populate:/Themes/Generic.axaml](#uid-43bd5f62df) | No summary available. |
| [Populate:/Themes/Simple/Simple.xaml](#uid-776f1a4e67) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-b6c5af77f8"></span>

### Build:/Controls/CarouselPage.xaml Method

```csharp
public Avalonia.Controls.ResourceDictionary Build:/Controls/CarouselPage.xaml(IServiceProvider arg0)
```

#### Parameters

`arg0` IServiceProvider


#### Returns

[Avalonia.Controls.ResourceDictionary](xref:Avalonia.Controls.ResourceDictionary)


</section>

<section className="apiref-page__member-entry">

<span id="uid-e8e48fa675"></span>

### Build:/Controls/ContentPage.xaml Method

```csharp
public Avalonia.Controls.ResourceDictionary Build:/Controls/ContentPage.xaml(IServiceProvider arg0)
```

#### Parameters

`arg0` IServiceProvider


#### Returns

[Avalonia.Controls.ResourceDictionary](xref:Avalonia.Controls.ResourceDictionary)


</section>

<section className="apiref-page__member-entry">

<span id="uid-eb6096c876"></span>

### Build:/Controls/DrawerPage.xaml Method

```csharp
public Avalonia.Controls.ResourceDictionary Build:/Controls/DrawerPage.xaml(IServiceProvider arg0)
```

#### Parameters

`arg0` IServiceProvider


#### Returns

[Avalonia.Controls.ResourceDictionary](xref:Avalonia.Controls.ResourceDictionary)


</section>

<section className="apiref-page__member-entry">

<span id="uid-b8757e9cd7"></span>

### Build:/Controls/NavigationPage.xaml Method

```csharp
public Avalonia.Controls.ResourceDictionary Build:/Controls/NavigationPage.xaml(IServiceProvider arg0)
```

#### Parameters

`arg0` IServiceProvider


#### Returns

[Avalonia.Controls.ResourceDictionary](xref:Avalonia.Controls.ResourceDictionary)


</section>

<section className="apiref-page__member-entry">

<span id="uid-5bab942d65"></span>

### Build:/Controls/PipsPager.xaml Method

```csharp
public Avalonia.Controls.ResourceDictionary Build:/Controls/PipsPager.xaml(IServiceProvider arg0)
```

#### Parameters

`arg0` IServiceProvider


#### Returns

[Avalonia.Controls.ResourceDictionary](xref:Avalonia.Controls.ResourceDictionary)


</section>

<section className="apiref-page__member-entry">

<span id="uid-58e0407545"></span>

### Build:/Controls/TabbedPage.xaml Method

```csharp
public Avalonia.Controls.ResourceDictionary Build:/Controls/TabbedPage.xaml(IServiceProvider arg0)
```

#### Parameters

`arg0` IServiceProvider


#### Returns

[Avalonia.Controls.ResourceDictionary](xref:Avalonia.Controls.ResourceDictionary)


</section>

<section className="apiref-page__member-entry">

<span id="uid-b110d5bc5c"></span>

### Build:/Controls/TextSelectionHandle.xaml Method

```csharp
public Avalonia.Controls.ResourceDictionary Build:/Controls/TextSelectionHandle.xaml(IServiceProvider arg0)
```

#### Parameters

`arg0` IServiceProvider


#### Returns

[Avalonia.Controls.ResourceDictionary](xref:Avalonia.Controls.ResourceDictionary)


</section>

<section className="apiref-page__member-entry">

<span id="uid-12c5a50494"></span>

### Build:/FluentTheme/Internal/Slider.axaml Method

```csharp
public Avalonia.Controls.ResourceDictionary Build:/FluentTheme/Internal/Slider.axaml(IServiceProvider arg0)
```

#### Parameters

`arg0` IServiceProvider


#### Returns

[Avalonia.Controls.ResourceDictionary](xref:Avalonia.Controls.ResourceDictionary)


</section>

<section className="apiref-page__member-entry">

<span id="uid-c609b8087a"></span>

### Build:/Themes/Default.axaml Method

```csharp
public Avalonia.Styling.Styles Build:/Themes/Default.axaml(IServiceProvider arg0)
```

#### Parameters

`arg0` IServiceProvider


#### Returns

[Avalonia.Styling.Styles](xref:Avalonia.Styling.Styles)


</section>

<section className="apiref-page__member-entry">

<span id="uid-bfe28687f1"></span>

### Build:/Themes/Fluent.axaml Method

```csharp
public Avalonia.Styling.Styles Build:/Themes/Fluent.axaml(IServiceProvider arg0)
```

#### Parameters

`arg0` IServiceProvider


#### Returns

[Avalonia.Styling.Styles](xref:Avalonia.Styling.Styles)


</section>

<section className="apiref-page__member-entry">

<span id="uid-bbd752db4c"></span>

### Build:/Themes/Fluent/Fluent.xaml Method

```csharp
public Avalonia.Styling.Styles Build:/Themes/Fluent/Fluent.xaml(IServiceProvider arg0)
```

#### Parameters

`arg0` IServiceProvider


#### Returns

[Avalonia.Styling.Styles](xref:Avalonia.Styling.Styles)


</section>

<section className="apiref-page__member-entry">

<span id="uid-5997089c96"></span>

### Build:/Themes/Generic.axaml Method

```csharp
public Avalonia.Styling.Styles Build:/Themes/Generic.axaml(IServiceProvider arg0)
```

#### Parameters

`arg0` IServiceProvider


#### Returns

[Avalonia.Styling.Styles](xref:Avalonia.Styling.Styles)


</section>

<section className="apiref-page__member-entry">

<span id="uid-61f4611297"></span>

### Build:/Themes/Simple/Simple.xaml Method

```csharp
public Avalonia.Styling.Styles Build:/Themes/Simple/Simple.xaml(IServiceProvider arg0)
```

#### Parameters

`arg0` IServiceProvider


#### Returns

[Avalonia.Styling.Styles](xref:Avalonia.Styling.Styles)


</section>

<section className="apiref-page__member-entry">

<span id="uid-4a941a49cf"></span>

### Populate:/Controls/CarouselPage.xaml Method

```csharp
public void Populate:/Controls/CarouselPage.xaml(IServiceProvider arg0, Avalonia.Controls.ResourceDictionary arg1)
```

#### Parameters

`arg0` IServiceProvider


`arg1` [Avalonia.Controls.ResourceDictionary](xref:Avalonia.Controls.ResourceDictionary)


</section>

<section className="apiref-page__member-entry">

<span id="uid-33fab34546"></span>

### Populate:/Controls/ContentPage.xaml Method

```csharp
public void Populate:/Controls/ContentPage.xaml(IServiceProvider arg0, Avalonia.Controls.ResourceDictionary arg1)
```

#### Parameters

`arg0` IServiceProvider


`arg1` [Avalonia.Controls.ResourceDictionary](xref:Avalonia.Controls.ResourceDictionary)


</section>

<section className="apiref-page__member-entry">

<span id="uid-21829c9912"></span>

### Populate:/Controls/DrawerPage.xaml Method

```csharp
public void Populate:/Controls/DrawerPage.xaml(IServiceProvider arg0, Avalonia.Controls.ResourceDictionary arg1)
```

#### Parameters

`arg0` IServiceProvider


`arg1` [Avalonia.Controls.ResourceDictionary](xref:Avalonia.Controls.ResourceDictionary)


</section>

<section className="apiref-page__member-entry">

<span id="uid-bbd19cb593"></span>

### Populate:/Controls/NavigationPage.xaml Method

```csharp
public void Populate:/Controls/NavigationPage.xaml(IServiceProvider arg0, Avalonia.Controls.ResourceDictionary arg1)
```

#### Parameters

`arg0` IServiceProvider


`arg1` [Avalonia.Controls.ResourceDictionary](xref:Avalonia.Controls.ResourceDictionary)


</section>

<section className="apiref-page__member-entry">

<span id="uid-644ac6b1f3"></span>

### Populate:/Controls/PipsPager.xaml Method

```csharp
public void Populate:/Controls/PipsPager.xaml(IServiceProvider arg0, Avalonia.Controls.ResourceDictionary arg1)
```

#### Parameters

`arg0` IServiceProvider


`arg1` [Avalonia.Controls.ResourceDictionary](xref:Avalonia.Controls.ResourceDictionary)


</section>

<section className="apiref-page__member-entry">

<span id="uid-eeb2ae5e7a"></span>

### Populate:/Controls/TabbedPage.xaml Method

```csharp
public void Populate:/Controls/TabbedPage.xaml(IServiceProvider arg0, Avalonia.Controls.ResourceDictionary arg1)
```

#### Parameters

`arg0` IServiceProvider


`arg1` [Avalonia.Controls.ResourceDictionary](xref:Avalonia.Controls.ResourceDictionary)


</section>

<section className="apiref-page__member-entry">

<span id="uid-81cb804ae5"></span>

### Populate:/Controls/TextSelectionHandle.xaml Method

```csharp
public void Populate:/Controls/TextSelectionHandle.xaml(IServiceProvider arg0, Avalonia.Controls.ResourceDictionary arg1)
```

#### Parameters

`arg0` IServiceProvider


`arg1` [Avalonia.Controls.ResourceDictionary](xref:Avalonia.Controls.ResourceDictionary)


</section>

<section className="apiref-page__member-entry">

<span id="uid-213b043797"></span>

### Populate:/FluentTheme/Internal/Slider.axaml Method

```csharp
public void Populate:/FluentTheme/Internal/Slider.axaml(IServiceProvider arg0, Avalonia.Controls.ResourceDictionary arg1)
```

#### Parameters

`arg0` IServiceProvider


`arg1` [Avalonia.Controls.ResourceDictionary](xref:Avalonia.Controls.ResourceDictionary)


</section>

<section className="apiref-page__member-entry">

<span id="uid-13ff60daff"></span>

### Populate:/Themes/Default.axaml Method

```csharp
public void Populate:/Themes/Default.axaml(IServiceProvider arg0, Avalonia.Styling.Styles arg1)
```

#### Parameters

`arg0` IServiceProvider


`arg1` [Avalonia.Styling.Styles](xref:Avalonia.Styling.Styles)


</section>

<section className="apiref-page__member-entry">

<span id="uid-997d35fcf9"></span>

### Populate:/Themes/Fluent.axaml Method

```csharp
public void Populate:/Themes/Fluent.axaml(IServiceProvider arg0, Avalonia.Styling.Styles arg1)
```

#### Parameters

`arg0` IServiceProvider


`arg1` [Avalonia.Styling.Styles](xref:Avalonia.Styling.Styles)


</section>

<section className="apiref-page__member-entry">

<span id="uid-32ec062a9c"></span>

### Populate:/Themes/Fluent/Fluent.xaml Method

```csharp
public void Populate:/Themes/Fluent/Fluent.xaml(IServiceProvider arg0, Avalonia.Styling.Styles arg1)
```

#### Parameters

`arg0` IServiceProvider


`arg1` [Avalonia.Styling.Styles](xref:Avalonia.Styling.Styles)


</section>

<section className="apiref-page__member-entry">

<span id="uid-43bd5f62df"></span>

### Populate:/Themes/Generic.axaml Method

```csharp
public void Populate:/Themes/Generic.axaml(IServiceProvider arg0, Avalonia.Styling.Styles arg1)
```

#### Parameters

`arg0` IServiceProvider


`arg1` [Avalonia.Styling.Styles](xref:Avalonia.Styling.Styles)


</section>

<section className="apiref-page__member-entry">

<span id="uid-776f1a4e67"></span>

### Populate:/Themes/Simple/Simple.xaml Method

```csharp
public void Populate:/Themes/Simple/Simple.xaml(IServiceProvider arg0, Avalonia.Styling.Styles arg1)
```

#### Parameters

`arg0` IServiceProvider


`arg1` [Avalonia.Styling.Styles](xref:Avalonia.Styling.Styles)


</section>

</ApiRefPage>

